--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="Styles/style.css">
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Ma<span class="primary-color">r</span>y</h3>
             <ul class="right-header">
@@ -20,6 +22,17 @@
                 <li> <button class="primary-button">Hire me</button> </li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greetings">Hi, I am</h3>
+                <h1 class="banner-name">Mary Hardy</h1>
+                <p class="banner-desc">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
+                    because as to society behaved moments.</p>
+                    <button class="primary-button">Download CV</button>
+                    <button class="primary-button" id="contact-btn">Contact</button>
+            </div>
+            <img src="images/hardy.png" alt="">
+        </div>
     </header>
     <main></main>
     <footer></footer>
