--- a/index.html
+++ b/index.html
@@ -26,15 +26,44 @@
             <div class="banner-content">
                 <h3 class="banner-greetings">Hi, I am</h3>
                 <h1 class="banner-name">Mary Hardy</h1>
-                <p class="banner-desc">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
+                <p class="title-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                    Morning
                     because as to society behaved moments.</p>
-                    <button class="primary-button">Download CV</button>
-                    <button class="primary-button" id="contact-btn">Contact</button>
+                <button class="primary-button">Download CV</button>
+                <button class="primary-button" id="contact-btn">Contact</button>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
     </header>
-    <main></main>
+    <main>
+        <section class="about-me-section">
+            <div class="about-me">
+                <h3 class="section-title">About Me</h3>
+                <p class="title-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                    simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                    procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                    clients requirements in our mata.</p>
+                    <div class="about-me-footer">
+                        <div>
+                            <p class="title-description">Name</p>
+                            <p class="title-data">Mary Hardy</p>
+                        </div>
+                        <div>
+                            <p class="title-description">E-mail</p>
+                            <p class="title-data">info@ingo.com</p>
+                        </div>
+                        <div>
+                            <p class="title-description">Date of Birth</p>
+                            <p class="title-data">11 November, 1980</p>
+                        </div>
+                        <div>
+                            <p class="title-description">From</p>
+                            <p class="title-data">Los Angles, USA</p>
+                        </div>
+                    </div>
+                </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 
