--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
     <main>
         <section class="about-me-section">
-            <div class="about-me">
+            <div>
                 <h3 class="section-title">About Me</h3>
                 <p class="title-description">I, m a designer & developer with a passion for web design. I enjoy developing
                     simple, clean and slick websites that provide real value to the end user. Thousands of clients have
@@ -63,8 +63,105 @@
                     </div>
                 </div>
         </section>
+        <section>
+            <div class="whatIdo">
+                <h3 class="section-title">What I do</h3>
+                <p class="title-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            </div>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h2 class="skill-title">Vanila JavaScript</h2>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h2 class="skill-title">React</h2>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h2 class="skill-title">Node.JS</h2>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h2 class="skill-title">MongoDB</h2>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h3 class="section-title">A summery of my Resume</h3>
+            <div class="resume-container">
+                <div>
+                    <h3 class="resume-section-title">My Education</h3>
+                    <div>
+                        <div>
+                            <h4 class="resume-title">Master in Computer Engineering</h4>
+                            <h4 class="resume-year">Harvard University / 2015 - 2017</h4>
+                            <p class="title-description">List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <div>
+                            <h4 class="resume-title">Master in Computer Engineering</h4>
+                            <h4 class="resume-year">Harvard University / 2015 - 2017</h4>
+                            <p class="title-description">List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <div>
+                            <h4 class="resume-title">Master in Computer Engineering</h4>
+                            <h4 class="resume-year">Harvard University / 2015 - 2017</h4>
+                            <p class="title-description">List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="resume-section-title">My Experience</h3>
+                    <div>
+                        <div>
+                            <h4 class="resume-title">Sr. Font End Developer</h4>
+                            <h4 class="resume-year">Apple Inc / 2020 - Current</h4>
+                            <p class="title-description">List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <div>
+                            <h4 class="resume-title">Jr. Font End Developer</h4>
+                            <h4 class="resume-year">Dribbble Inc / 2018 - 2022</h4>
+                            <p class="title-description">List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <div>
+                            <h4 class="resume-title">HTML Developer</h4>
+                            <h4 class="resume-year">Adobe Inc / 2017 - 2018</h4>
+                            <p class="title-description">List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="middle-btn">
+                <button class="primary-button">Download CV</button>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="footer-container">
+            <div>
+                <h3 class="footer-title">Let's Connect</h3>
+                <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <img src="images/icons/facebook.png" alt=""><img src="images/icons/twitter.png" alt=""><img src="images/icons/insta.png" alt="">
+            </div>
+            <div class="footer-fields">
+                <h3 class="footer-title">Let's message me</h3>
+                <input id="input" type="text" placeholder="Your Name">
+                <input id="input" type="email" placeholder="Your E-mail">
+                <input id="message" type="text" placeholder="Write message here">
+                <button class="primary-button">Submit</button>
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
