--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="Styles/style.css">
+    <script src="https://kit.fontawesome.com/c57b3c8546.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -29,8 +30,8 @@
                 <p class="title-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning
                     because as to society behaved moments.</p>
-                <button class="primary-button">Download CV</button>
-                <button class="primary-button" id="contact-btn">Contact</button>
+                <button class="primary-button"> <i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="primary-button" id="contact-btn"> <i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
@@ -142,7 +143,7 @@
                 </div>
             </div>
             <div class="middle-btn">
-                <button class="primary-button">Download CV</button>
+                <button class="primary-button"> <i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
     </main>
